<resources>
    <string name="app_name">MUDRA</string>
    <string name="real_time">REAL TIME</string>
    <string name="alphabet_detection">Alphabet Detection</string>
    <string name="clear">Clear</string>
    <string name="mudra">MUDRA</string>
    <string name="dictionary">Dictionary</string>
    <string name="language_detection">Language Detection</string>
    <string name="english">ENGLISH</string>
    <string name="HINDI">हिंदी</string>
    <string name="KANNADA">ಕನ್ನಡ</string>
    <string name="book">📚</string>
    <string name="mudra1">MUDRA</string>
    <string name="a_how_are_you_n_n">a:How are you?\n आप कैसे हैं?\n ನೀವು ಹೇಗಿದ್ದೀರಿ?</string>
    <string name="b_bad_n_n">b:Bad\n बुरा है\n ಕೆಟ್ಟದಾಗಿದೆ</string>
    <string name="c_come_here_n_n">c:Come here\n यहाँ आओ\n ಇಲ್ಲಿ ಬಾ</string>
    <string name="d_dance_n_n">d:Dance\n नृत्य\n ನೃತ್ಯ</string>
    <string name="g_good_go_n_n">g:Good/Go\n अच्छा जाओ\n ಒಳ್ಳೆಯದು ಹೋಗು</string>
    <string name="f_food_n_n">f:Food\n खाना\n ಫುಡ್</string>
    <string name="h_hello_n_n">h:Hello\n नमस्ते\n ನಮಸ್ಕಾರ</string>
    <string name="i_i_m_fine_i_n_n">i:I\'m fine/I\n मैं ठीक हूं\n ನಾನು ಚೆನ್ನಾಗಿದ್ದೇನೆ</string>
    <string name="j_justice_n_n">j:Justice\n न्याय\n ನ್ಯಾಯ</string>
    <string name="m_my_n_n">m:My\n मेरा\n ನನ್ನ</string>
    <string name="l_live_n">l:Live/ लाइव लेफ्ट\n ಲೈವ್ ಬಿಟ್ಟರು</string>
    <string name="k_congratulations_n_n">k:Congratulations\n बधाई हो\n ಅಭಿನಂದನೆಗಳು</string>
    <string name="n_no_need_n_n">n:No/Need\n नहीं ज़रूरत\n ಸಂ ಅಗತ್ಯವಿದೆ</string>
    <string name="o_ok_done_n_n">o:Ok/Done\n ठीक है /हो गया\n ಸರಿ/ ಮುಗಿದಿದೆ</string>
    <string name="p_please_n_n">p:Please\n कृपया\n ದಯವಿಟ್ಟು</string>
    <string name="q_question_answer_n_n">q:Question/Answer\n सवाल/उत्तर\n ಪ್ರಶ್ನೆ/ಉತ್ತರ</string>
    <string name="r_repeat_rotate_n_n">r:Repeat/Rotate\n दोहराना/घुमाएँ\n ಪುನರಾವರ್ತಿಸಿ/ತಿರುಗಿಸಿ</string>
    <string name="s_sorry_n_n">s:Sorry\n मुझे माफ़ करें\n ನನ್ನನ್ನು ಕ್ಷಮಿಸು</string>
    <string name="w_what_when_where_why_n_n">w:What/When/Where/Why\n क्या/कब/कहाँ/क्यों\n ಏನು/ಯಾವಾಗ/ಎಲ್ಲಿ/ಏಕೆ</string>
    <string name="v_value_price_rate_n_n">v:Value/Price/Rate\n कीमत\n ಬೆಲೆ</string>
    <string name="u_understand_n_n">u:Understand\n मैं समझता हूँ / क्या तुम समझ रहे हो\n ನಾನು ಅರ್ಥಮಾಡಿಕೊಂಡಿದ್ದೇನೆ</string>
    <string name="t_thankyou_n_n">t:ThankYou\n धन्यवाद\n ಧನ್ಯವಾದ</string>
    <string name="y_you_your_n_n">y:You/Your\n आप/आपका\n ನೀವು/ನಿಮ್ಮದು</string>
    <string name="x_time_n_n">x:Time\n समय\n ಸಮಯ</string>
    <string name="e_eat_n_n">e:Eat\n खाओ\n ತಿನ್ನು</string>
</resources>